# WeWantPC

./: .gitignore  Cargo.toml  README.md  db-models-sample.md  package-lock.json  package.json  todo.txt
backend/: main.rs  schema.rs
backend/handle_user_input/: create_admin.rs
backend/models/: mod.rs  products.rs  users.rs
backend/routes/: create_staff.rs  login.rs  logout.rs  whoami.rs
backend/types/: permission.rs
backend/utils/: create_user.rs  get_input.rs  mod.rs
components/: LoginRequired.tsx  Navbar.tsx  VNav.tsx
components/Home/: ImageSlider.tsx
contexts/: user.ts
migrations/2022-12-09-052418_users/: up.sql
migrations/2022-12-14-002334_products/: up.sql
migrations/2022-12-14-004748_specifications/: down.sql  up.sql
migrations/2022-12-14-005332_categories/: down.sql
migrations/2022-12-14-033917_users/: up.sql
migrations/2022-12-14-034003_categories/: up.sql
migrations/2022-12-14-034043_products/: up.sql
migrations/2022-12-14-034105_specifications/: down.sql  up.sql
pages/: _app.tsx  cart.tsx  compare.tsx  help.tsx  index.tsx  login.tsx  pc-components.tsx  register.tsx
pages/admin/: index.tsx
pages/api/: hello.ts
pages/profile/: index.tsx  orders.tsx
src/: lib.rs  main.rs  models.rs  schema.rs
src/handle_user_input/: create_admin.rs  mod.rs
src/models/: products.rs  specifications.rs  users.rs
src/routes/: create_product.rs  login.rs  mod.rs  register.rs  whoami.rs
src/types/: mod.rs  response.rs  role.rs
src/utils/: create_user.rs  get_pool.rs  mod.rs
styles/: globals.scss  navbar.scss  slider.scss  vnav.scss
utils/: get.ts  post.ts
