[package]
name = "wewantpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-service = "2.0.2"
actix-session = "0.7.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
rand = "0.8.5"
sanitize-filename = "0.4.0"
serde = "1.0.148"
serde_json = "1.0.89"
tokio = "1.22.0"
uuid = { version = "1.2.2", features = ["v4"] }
