[package]
name = "wewantpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-service = "2.0.2"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
argon2 = "0.4.1"
chrono = {version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
sanitize-filename = "0.4.0"
serde ={version= "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
tokio = "1.22.0"
uuid = { version = "1.2.2", features = ["v4"] }